using UnityEngine;
using System.Collections;
using System.Collections.Generic;
using System.Linq;
// using System.Diagnostics;

public class GlassBridgeAI : MonoBehaviour
{

    [Header("Sound & SFX")]
    public Gender gender; // Set the AI's gender in the Inspector
    private AudioSource audioSource;

    // Ø§ÛŒÙ† enum ÙˆØ¶Ø¹ÛŒØªâ€ŒÙ‡Ø§ÛŒ Ù…Ø®ØªÙ„Ù Ù‡ÙˆØ´ Ù…ØµÙ†ÙˆØ¹ÛŒ Ø±Ø§ ØªØ¹Ø±ÛŒÙ Ù…ÛŒâ€ŒÚ©Ù†Ø¯
    private enum AIState { WaitingInQueue, MovingInQueue, DecidingToJump, Jumping, Fallen, Won }
    private AIState currentState = AIState.WaitingInQueue;

    [Header("Jump Behaviour")]
    public float moveSpeed = 5f;
    public float walkInQueueSpeed = 3f;
    public float jumpScale = 1.3f;
    public float scaleSmooth = 5f;

    [Header("AI Decision Making")]
    public float minThinkTime = 0.8f;
    public float maxThinkTime = 2.5f;

    [Header("Game State")]
    public Transform finishLine;
    public LayerMask platformLayer;
    public LayerMask characterLayer;

    [Header("Animation & Visuals")]
    public Animator animator;
    public string walkingBoolName = "isWalking";
    public string jumpBoolName = "jump";
    public string fallBoolName = "falling";
    private Vector3 normalScale;
    
    // --- Private ---
    private QueueManager queueManager;
    private Coroutine currentActionCoroutine;
    private bool isFalling = false;


    void Start()
    {
        audioSource = GetComponent<AudioSource>(); // Add this line

        normalScale = transform.localScale;
        if (!animator) animator = GetComponentInChildren<Animator>();
        queueManager = QueueManager.Instance;

        // ğŸ‘‡ Ø§ÛŒÙ† Ø®Ø· Ø¨Ø§Ø¹Ø« Ù…ÛŒØ´Ù‡ Ø¯Ø± ÙØ±ÛŒÙ… Ø§ÙˆÙ„ Ù‡Ù…Ù‡â€ŒÚ†ÛŒØ² Ø¨Ø§ Ø³Ø±Ø¹Øª Ø·Ø¨ÛŒØ¹ÛŒ Ø¨Ø§Ø´Ù‡
        StartCoroutine(EnsureNormalTimeScale());
    }

    private IEnumerator EnsureNormalTimeScale()
    {
        // ØµØ¨Ø± Ù…ÛŒâ€ŒÚ©Ù†Ù‡ ØªØ§ Unity Ú©Ø§Ù…Ù„Ø§Ù‹ Scene Ø±Ùˆ Ø±Ø§Ù‡â€ŒØ§Ù†Ø¯Ø§Ø²ÛŒ Ú©Ù†Ù‡
        yield return new WaitForEndOfFrame();
        Time.timeScale = 1f;
    }


    void Update()
    {

        if (Time.timeScale < 0.5f) // (Ø§Ø² 0.5 Ø§Ø³ØªÙØ§Ø¯Ù‡ Ù…ÛŒâ€ŒÚ©Ù†ÛŒÙ… ØªØ§ Ù…Ø·Ù…Ø¦Ù†â€ŒØªØ± Ø¨Ø§Ø´Ù‡)
        {
            if (animator) animator.SetBool(walkingBoolName, false); // Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø±Ø§Ù‡ Ø±ÙØªÙ† Ø±Ùˆ Ù‡Ù… Ù…ØªÙˆÙ‚Ù Ú©Ù†
            return; // Ø§Ø² ØªØ§Ø¨Ø¹ Update Ø®Ø§Ø±Ø¬ Ø´Ùˆ
        }
        // <<< --- Ù¾Ø§ÛŒØ§Ù† Ø¨Ø®Ø´ Ø¬Ø¯ÛŒØ¯ --- >>>

        if (currentState == AIState.Fallen || currentState == AIState.Won) return;

        // --- Ù…ØºØ² Ø§ØµÙ„ÛŒ Ù…Ø¨ØªÙ†ÛŒ Ø¨Ø± ÙˆØ¶Ø¹ÛŒØª ---
        switch (currentState)
        {
            case AIState.WaitingInQueue:
                DecideNextActionInQueue();
                break;
            
            case AIState.DecidingToJump:
                if (currentActionCoroutine == null)
                {
                    currentActionCoroutine = StartCoroutine(DecideAndJumpCoroutine());
                }
                break;
        }
    }

    void DecideNextActionInQueue()
    {
        Transform targetSlot = queueManager.GetMyTargetSlot(this);
        if (targetSlot == null) return; 

        if (Vector3.Distance(transform.position, targetSlot.position) > 0.1f)
        {
            currentState = AIState.MovingInQueue;
            if (currentActionCoroutine != null) StopCoroutine(currentActionCoroutine);
            currentActionCoroutine = StartCoroutine(MoveToTargetCoroutine(targetSlot.position, walkInQueueSpeed, walkingBoolName));
        }
        else
        {
            if (queueManager.GetMyTargetSlot(this) == queueManager.queueSlots[0])
            {
                currentState = AIState.DecidingToJump;
            }
        }
    }

    private IEnumerator MoveToTargetCoroutine(Vector3 targetPosition, float speed, string animBool)
    {
        if (animator) animator.SetBool(animBool, true);
        while (Vector3.Distance(transform.position, targetPosition) > 0.05f)
        {
            transform.position = Vector3.MoveTowards(transform.position, targetPosition, speed * Time.deltaTime);
            yield return null;
        }
        transform.position = targetPosition;
        if (animator) animator.SetBool(animBool, false);

        currentState = AIState.WaitingInQueue;
        currentActionCoroutine = null;
    }

    private IEnumerator DecideAndJumpCoroutine()
    {
        float thinkTime = Random.Range(minThinkTime, maxThinkTime);
        yield return new WaitForSeconds(thinkTime);

        Transform targetPlatform = FindNextJumpTarget();

        if (targetPlatform != null)
        {
            queueManager.CharacterStartedJumping(this);
            currentState = AIState.Jumping;
            yield return StartCoroutine(JumpToTargetCoroutine(targetPlatform.position));
            CheckLanding();
        }
        else
        {
            yield return new WaitForSeconds(1f);
            currentState = AIState.DecidingToJump;
        }
        currentActionCoroutine = null;
    }

    

    // --- ØªØ§Ø¨Ø¹ CheckLanding Ø§ØµÙ„Ø§Ø­ Ø´Ø¯ ---
    private void CheckLanding()
    {
        if (isFalling) return; // Ø§Ú¯Ø± Ø¯Ø± Ø­Ø§Ù„ Ø³Ù‚ÙˆØ· Ø§Ø³ØªØŒ Ø¨Ø±Ø±Ø³ÛŒ Ø±Ø§ Ù…ØªÙˆÙ‚Ù Ú©Ù†    

        Collider2D hit = Physics2D.OverlapCircle(transform.position, 0.2f, platformLayer);

        if (hit != null)
        {
            // --- Ù¾Ø®Ø´ ØµØ¯Ø§ÛŒ ÙØ±ÙˆØ¯ Ø¨Ø§ Ø§Ø­ØªÙ…Ø§Ù„ Û¸Û° Ø¯Ø±ØµØ¯ ---
            if (hit.CompareTag("Breakable") || hit.CompareTag("Unbreakable"))
            {
                if (Random.value <= 0.8f) // 80% Ø´Ø§Ù†Ø³ Ù¾Ø®Ø´ ØµØ¯Ø§
                {
                    AudioClip landingSound = GlassBridgeSoundManager.Instance.GetRandomLandingSound();
                    if (landingSound != null)
                    {
                        audioSource.PlayOneShot(landingSound);
                    }
                }
            }
            // ----------------------------------------
        
            if (hit.CompareTag("Breakable"))
            {
                StartCoroutine(FallCoroutine(hit.transform));
            }
            if (hit.CompareTag("FinishPlatform"))
            {
                currentState = AIState.Won;
                Debug.Log($"{gameObject.name} has won!");
                StartCoroutine(MoveToFinalPositionAndWin(hit.GetComponent<BoxCollider2D>()));
                return;
            }
            else
            {
                // --- Ø§ÛŒÙ† Ø®Ø· Ø¬Ø¯ÛŒØ¯ Ùˆ Ú©Ù„ÛŒØ¯ÛŒ Ø§Ø³Øª ---
                // Ø§Ú¯Ø± Ø³Ø§Ù„Ù… ÙØ±ÙˆØ¯ Ø¢Ù…Ø¯ØŒ Ø¨Ù‡ Ø­Ø§Ù„Øª ØªØµÙ…ÛŒÙ…â€ŒÚ¯ÛŒØ±ÛŒ Ø¨Ø±Ø§ÛŒ Ù¾Ø±Ø´ Ø¨Ø¹Ø¯ÛŒ Ø¨Ø±Ù…ÛŒâ€ŒÚ¯Ø±Ø¯Ø¯
                currentState = AIState.DecidingToJump;
            }
        }
        else
        {
            StartCoroutine(FallCoroutine(null));
        }
    }



        // --- ØªØ§Ø¨Ø¹ Ø¬Ø¯ÛŒØ¯ Ø¨Ø±Ø§ÛŒ Ø­Ø±Ú©Øª Ù†Ù‡Ø§ÛŒÛŒ Ùˆ Ø¨Ø±Ù†Ø¯Ù‡ Ø´Ø¯Ù† ---
    private IEnumerator MoveToFinalPositionAndWin(BoxCollider2D finishCollider)
    {
        if (isFalling) yield break; // Ø§Ú¯Ø± Ø¯Ø± Ø­Ø§Ù„ Ø³Ù‚ÙˆØ· Ø§Ø³ØªØŒ Ø§ÛŒÙ† Ú©Ø§Ø± Ø±Ø§ Ù…ØªÙˆÙ‚Ù Ú©Ù†

        // Û±. ÛŒÚ© Ù†Ù‚Ø·Ù‡ ØªØµØ§Ø¯ÙÛŒ Ø¯Ø§Ø®Ù„ Ú©Ù„Ø§ÛŒØ¯Ø± Ø³Ú©ÙˆÛŒ Ù†Ù‡Ø§ÛŒÛŒ Ù¾ÛŒØ¯Ø§ Ú©Ù†
        Bounds bounds = finishCollider.bounds;
        float randomX = Random.Range(bounds.min.x, bounds.max.x);
        float randomY = Random.Range(bounds.min.y, bounds.max.y);
        Vector3 finalPosition = new Vector3(randomX, randomY, transform.position.z);

        // Û². Ø¨Ø§ Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ø±Ø§Ù‡ Ø±ÙØªÙ† Ø¨Ù‡ Ø³Ù…Øª Ø¢Ù† Ù†Ù‚Ø·Ù‡ Ø­Ø±Ú©Øª Ú©Ù†
        if (animator) animator.SetBool(walkingBoolName, true);
        while (Vector3.Distance(transform.position, finalPosition) > 0.05f)
        {
            transform.position = Vector3.MoveTowards(transform.position, finalPosition, walkInQueueSpeed * Time.deltaTime);
            yield return null;
        }
        transform.position = finalPosition;
        if (animator) animator.SetBool(walkingBoolName, false);
        
        Debug.Log($"{gameObject.name} has won!");
    }


    private IEnumerator FallCoroutine(Transform platform)
    {
        currentState = AIState.Fallen;

        // <<< --- Ø§ÛŒÙ† Ø®Ø· Ø¬Ø¯ÛŒØ¯ Ø§Ø¶Ø§ÙÙ‡ Ø´Ø¯ --- >>>
        // Ø¨Ù‡ Ù…Ø¯ÛŒØ± Ù…Ø±Ø­Ù„Ù‡ Ø®Ø¨Ø± Ù…ÛŒØ¯Ù‡ Ú©Ù‡ Ø§ÛŒÙ† AI Ø­Ø°Ù Ø´Ø¯Ù‡
        // if (Stage5_Manager.Instance != null)
        // {
        //     Stage5_Manager.Instance.ReportAIFallen();
        // }
        // <<< --- Ù¾Ø§ÛŒØ§Ù† ØªØºÛŒÛŒØ± --- >>>

        int myID = GetComponent<CharacterIdentity>().playerID;
        GameManager.Instance.EliminatePlayer(myID);

        // --- Play Falling Scream ---
        AudioClip screamSound = GlassBridgeSoundManager.Instance.GetRandomScream(gender);
        if (screamSound != null)
        {
            audioSource.PlayOneShot(screamSound);
        }
        // -------------------------


        if (animator) animator.SetBool(fallBoolName, true);
        isFalling = true;

        Vector3 startScale = transform.localScale;
        Vector3 platformStartScale = (platform != null) ? platform.localScale : Vector3.one;
        float duration = 1.5f;
        float timer = 0f;

        while (timer < duration)
        {
            float t = timer / duration;
            transform.localScale = Vector3.Lerp(startScale, Vector3.zero, t);
            transform.Translate(Vector3.down * 2f * Time.deltaTime, Space.World);
            if (platform != null)
            {
                platform.localScale = Vector3.Lerp(platformStartScale, Vector3.zero, t);
                platform.Translate(Vector3.down * 2f * Time.deltaTime, Space.World);
            }
            timer += Time.deltaTime;
            yield return null;
        }

        if (platform != null) Destroy(platform.gameObject);
        Destroy(gameObject);
    }
    
    private IEnumerator JumpToTargetCoroutine(Vector3 targetPosition)
    {
        if (isFalling) yield break; // Ø§Ú¯Ø± Ø¯Ø± Ø­Ø§Ù„ Ø³Ù‚ÙˆØ· Ø§Ø³ØªØŒ Ù¾Ø±Ø´ Ø±Ø§ Ù…ØªÙˆÙ‚Ù Ú©Ù† 

        targetPosition.z = transform.position.z;

        // ØªÙˆÙ‚Ù Ø§Ù†ÛŒÙ…ÛŒØ´Ù†â€ŒÙ‡Ø§ÛŒ Ø¯ÛŒÚ¯Ø± Ù‚Ø¨Ù„ Ø§Ø² Ù¾Ø±Ø´
        if (animator)
        {
            animator.SetBool(walkingBoolName, false); // ØªÙˆÙ‚Ù Ø±Ø§Ù‡ Ø±ÙØªÙ†
            animator.SetBool(fallBoolName, false);
        }
    

        // --- Ù¾Ø®Ø´ ØµØ¯Ø§ÛŒ Ù¾Ø±Ø´ Ø¨Ø± Ø§Ø³Ø§Ø³ Ø¬Ù†Ø³ÛŒØª ---
        AudioClip jumpSound = GlassBridgeSoundManager.Instance.GetRandomJumpSound(gender);
        if (jumpSound != null)
        {
            audioSource.PlayOneShot(jumpSound);
        }
        // ---------------------------------
    
    
        if (animator) animator.SetBool(jumpBoolName, true);
        Vector3 startPosition = transform.position;
        float journeyLength = Vector3.Distance(startPosition, targetPosition);
        
        while (Vector3.Distance(transform.position, targetPosition) > 0.01f)
        {
            Debug.Log($"[AI {name}] Jumping with moveSpeed={moveSpeed}, deltaTime={Time.deltaTime}");

            transform.position = Vector3.MoveTowards(transform.position, targetPosition, moveSpeed * Time.deltaTime);
            float distCovered = Vector3.Distance(startPosition, transform.position);
            float progress = journeyLength > 0.001f ? distCovered / journeyLength : 1f;
            float scaleFactor = Mathf.Sin(progress * Mathf.PI) * (jumpScale - 1f) + 1f;
            transform.localScale = normalScale * scaleFactor;
            yield return null;
        }
        
        transform.position = targetPosition;
        transform.localScale = normalScale;
        if(animator) animator.SetBool(jumpBoolName, false);
    }

    private Transform FindNextJumpTarget()
    {
        Collider2D[] allPlatformsInFront = Physics2D.OverlapCircleAll(transform.position + Vector3.right * 5f, 5f, platformLayer);
        List<Transform> nextRowPlatforms = new List<Transform>();
        foreach (var platformCollider in allPlatformsInFront)
        {
            if (platformCollider.transform.position.x > transform.position.x + 0.5f)
            {
                nextRowPlatforms.Add(platformCollider.transform);
            }
        }

        if (nextRowPlatforms.Count == 0) return null;
        nextRowPlatforms = nextRowPlatforms.OrderBy(p => Vector3.Distance(transform.position, p.position)).ToList();

        List<Transform> candidates = new List<Transform>();
        if (nextRowPlatforms.Count > 0) candidates.Add(nextRowPlatforms[0]);
        if (nextRowPlatforms.Count > 1 && Mathf.Abs(nextRowPlatforms[0].position.y - nextRowPlatforms[1].position.y) < 1.0f) 
            candidates.Add(nextRowPlatforms[1]);
        
        List<Transform> availableCandidates = new List<Transform>();
        foreach (Transform candidate in candidates)
        {
            Collider2D[] occupants = Physics2D.OverlapCircleAll(candidate.position, 0.3f, characterLayer);
            if (occupants.Length == 0)
            {
                availableCandidates.Add(candidate);
            }
        }

        if (availableCandidates.Count > 0)
        {
            return availableCandidates[Random.Range(0, availableCandidates.Count)];
        }

        return null;
    }
}